--- a/style/style.css
+++ b/style/style.css
@@ -73,15 +73,30 @@ body {
     display: flex;
 }
 
+.header-top-container > nav > .hamburger-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    
+    display: none;
+}
+
+.header-top-container > nav > .hamburger-btn span {
+    font-size: 2rem;
+    padding: 0px;
+}
+
 .header-top-container > nav > ul {
     display: flex;
-    width: 250px;
+    width: 400px;
     justify-content: space-between;
-    
 }
 
 .header-top-container > nav a {
     text-decoration: none;
+    font-size: 1.4rem;
+
     transition: .1s;
     transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
