--- a/style/media-query.css
+++ b/style/media-query.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+:root {
+    --bgColor: #232830;
+    --primaryColor: #FF7575;
+    --secondaryColor: #909090;
+}
+
+
 @media only screen and (max-width: 1500px) {
     .articles-grid {
         grid-template-columns: repeat(2, 1fr);
@@ -26,11 +33,53 @@
 @media only screen and (max-width: 1030px) {
     .header-top-container > nav > .hamburger-btn {
         display: block;
+        cursor: pointer;
+
+    }
+    
+    .header-top-container > nav > .hamburger-btn span {
+        font-size: 2rem;
+        padding: 0px;
     }
 
-    .header-top-container > nav > ul {
+    #nav-list-2-container {
+        display: flex;
+        align-items: flex-end;
+        width: 75vw;
+        flex-direction: column;
+
+    }
+    
+    #nav-list {
         display: none;
     }
+    
+    #nav-list-2 {
+        display: flex;
+        flex-direction: column; 
+        
+        gap: 1rem;
+    }
+
+    #nav-list-2 a {
+        text-decoration: none;
+        text-align: center;
+        border-bottom: 1px solid var(--primaryColor);
+
+        transition: .1s;
+    }
+
+    #nav-list-2 a:hover {
+        color: var(--primaryColor);
+    }
+/* 
+    .header-top-container > nav > ul {
+        display: none;
+        flex-direction: column;
+
+        height: 100vh;
+        width: 50vw;
+    } */
 
     .articles-grid {
         grid-template-columns: repeat(1, 1fr);
